--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,50 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@import url(https://fonts.googleapis.com/css?family=Roboto:100,100italic,300,300italic,regular,italic,500,500italic,700,700italic,900,900italic);
+
+body{
+    background-color: #e6e9f2;
+    font-family: 'Proxima Nova', sans-serif;
+    margin:0;
+    padding:0;
+    width: 100%;
+}
+/* img{
+    max-width: 100%;
+    height: auto;
+} */
+ul{
+    padding: 0;
+    margin: 0;
+}
+li{
+    margin: 0;
+    padding: 0;
+    list-style-type: none;
+}
+a{
+    text-decoration: none;
+}
+p{
+    margin:0;
+}
+h1, h2, h3 ,h4 ,h5{
+    margin:0;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.leaflet-container{
+    width:402px;
+    height: 218px;
+    border-radius: 0 0 8px 8px;
+}
+@media screen and (max-width:1313px) {
+    .leaflet-container{
+        width: 100%;
+    }
+}
+
+@media screen and (max-width:768px) {
+    .leaflet-container{
+        width:100%;
+        height: 100%;
+        border-radius: 0 0 8px 8px;
+    }
 }
